[package]
name = "komsi"
version = "0.1.0"
edition = "2024"
description = "Library for th KOMSI protocol"
license = "MIT"
readme = "README.md"
repository = "https://github.com/thatzok/komsi-lib"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json","blocking"] }

