[package]
name = "komsi"
version = "1.7.0"
edition = "2024"
rust-version = "1.92.0"
description = "Library for the KOMSI protocol"
authors = ["ThatZok <af@komplix.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/thatzok/komsi-lib"

[features]
default = ["std"]
std = []
defmt = ["dep:defmt"]

[dependencies]
defmt = { version = "1.0", optional = true }

